--- a/sass/base/_logo.scss
+++ b/sass/base/_logo.scss
@@ -8,7 +8,7 @@
   color: $color-header-text-color;
   letter-spacing: -0.02em;
 
-  @include media-mobile-landscape {
+  @include media-tablet {
     font-size: 20px;
   }
 
