--- a/sass/components/_side-menu.scss
+++ b/sass/components/_side-menu.scss
@@ -23,7 +23,7 @@
   height: 100vh;
   left: 0;
   top: 0;
-  padding: 24px 10px 30px 71px;
+  padding: 26px 10px 30px 71px;
   background:$color-header-background;
   box-shadow: 0px -40px 20px rgba(0, 0, 0, 0.4);
   z-index: $z-index-side-menu;
@@ -52,8 +52,8 @@
   margin-top: 160px;
   height: calc(100vh - 160px - 30px - #{$header-height-mobile});
 
-  @media (max-width: calc(#{$content-width-mobile-landscape} - 1px)) and (orientation: landscape) {
-    margin-top: 50px;
-    height: calc(100vh - 50px - 30px - #{$header-height-mobile});
+  @media (max-width: calc(#{$content-width-tablet} - 1px)) and (orientation: landscape) {
+    margin-top: 30px;
+    height: calc(100vh - 30px - 30px - #{$header-height-mobile});
   }
 }
