--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -9,7 +9,7 @@
   border-bottom: 6px solid $color-header-border;
   z-index: $z-index-header;
   
-  @include media-mobile-landscape {
+  @include media-tablet {
     padding-top: 26px;
     padding-bottom: 19px;
     border-bottom-color: $color-header-background;
@@ -21,8 +21,9 @@
   justify-content: space-between;
   align-items: flex-end;
   
-  @include media-mobile-landscape {
+  @include media-tablet {
     justify-content: center;
+    align-items: center;
   }
 }
 
@@ -33,7 +34,7 @@
   top: 26px;
   z-index: $z-index-side-menu-hamburger;
 
-  @include media-mobile-landscape {
+  @include media-tablet {
     display: flex;
   }
 }
@@ -41,7 +42,7 @@
 .header__navbar {
   display: flex;
 
-  @include media-mobile-landscape {
+  @include media-tablet {
     display: none;
   }
 }
@@ -49,7 +50,7 @@
 .header__side-menu {
   display: none;
 
-  @include media-mobile-landscape {
+  @include media-tablet {
     display: block;
   }
 }
