style: change all sections with markup-768, 375

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -12,7 +12,7 @@ body {
   @extend %font-main;
   color: $color-light;
 
-  @include media-mobile-landscape {
+  @include media-tablet {
     margin-top: $header-height-mobile;
   }
 }
