--- a/sass/components/_services.scss
+++ b/sass/components/_services.scss
@@ -1,16 +1,16 @@
 
 .services {
-  padding: 3.7125em 0 1.875em 0;
+  padding: 59.4px 0 24px 0;
   background-color: $color-services-background;
   border-bottom: 6px solid $color-services-border;
   scroll-margin-top: calc( #{$header-height} - 1px );
 
   @include media-laptop {
     $ratio-padding-top: calc(( 59.4 - 39.24 ) / ( 1020 - 768 ));
-    $ratio-padding-bottom: calc(( 30 - 19 ) / ( 1020 - 768 ));
+    $ratio-padding-bottom: calc(( 24 - 19 ) / ( 1020 - 768 ));
 
     padding-top: calc( 59.4px - ( 1020px - 100vw ) * #{$ratio-padding-top} );
-    padding-bottom: calc( 30px - ( 1020px - 100vw ) * #{$ratio-padding-bottom} );
+    padding-bottom: calc( 24px - ( 1020px - 100vw ) * #{$ratio-padding-bottom} );
   }
 
   @include media-tablet {
@@ -40,14 +40,27 @@
   margin-top: 0.958em;
   @include font ($size: 1.125rem, $height: 1.7, $weight: 300);
   color: $color-services-text;
+
+  @include media-tablet {
+    letter-spacing: 0.025em;
+  }
 }
 
 .services__features {
-  margin-top: 2.85em;
+  margin-top: 47px;
   
   @include media-laptop {
-    $ratio: calc( ( 45.6 - 38 ) / ( 1020 - 768 ) );
-    margin-top: calc( 45.6px - ( 1020px - 100vw ) * #{$ratio} );
+    $ratio: calc( ( 47 - 38 ) / ( 1020 - 768 ) );
+    margin-top: calc( 47px - ( 1020px - 100vw ) * #{$ratio} );
+  }
+
+  @include media-tablet {
+    $ratio: calc( ( 38 - 30 ) / ( 768 - 375 ) );
+    margin-top: calc( 38px - ( 768px - 100vw ) * #{$ratio} );
+  }
+
+  @include media-mobile {
+    margin-top: 30px;
   }
 }
 
@@ -70,24 +83,33 @@
     width: calc((100% - #{$margin-right-features-list__item}) / 2);
     padding-right: 34px;
   }
-
+  
   @include media-mobile-landscape {
-    width: 80%;
-  }
-
-  @include media-mobile {
     width: 100%;
+    padding-right: 0;
   }
 }
 
 .feature-tile {
-  margin-bottom: 1.875em;
+  margin-bottom: 32px;
   padding-left: 5em;
   position: relative;
 
   @include media-laptop {
-    $ratio: calc( ( 50 - 30 ) / ( 1020 - 768 ) );
-    margin-bottom: calc( 30px + ( 1020px - 100vw ) * #{$ratio} );
+    $ratio: calc( ( 32 - 50 ) / ( 1020 - 768 ) );
+    margin-bottom: calc( 32px - ( 1020px - 100vw ) * #{$ratio} );
+  }
+
+  @include media-tablet {
+    $ratio: calc( ( 26 - 50 ) / ( 768 - 375 ) );
+    margin-bottom: calc( 50px + ( 768px - 100vw ) * #{$ratio} );
+  }
+
+  &:last-child {
+    @include media-tablet {
+      $ratio: calc( ( 20 - 50 ) / ( 768 - 375 ) );
+      margin-bottom: calc( 50px + ( 768px - 100vw ) * #{$ratio} );
+    }
   }
 
   &::before {
