--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -4,7 +4,7 @@
   top: 0;
   left: 0;
   width: 100vw;
-  padding: 2em 0 2em 0;
+  padding: 32px 0 32px 0;
   background-color: $color-header-background;
   border-bottom: 6px solid $color-header-border;
   z-index: $z-index-header;
@@ -20,10 +20,13 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
+
+  @include media-laptop {
+    align-items: center;
+  }
   
   @include media-tablet {
     justify-content: center;
-    align-items: center;
   }
 }
 
