--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body {
   box-sizing: border-box;
   color: #ffffff;
 }
-@media (max-width: calc(640px - 1px)) {
+@media (max-width: calc(768px - 1px)) {
   body {
     margin-top: 71px;
   }
@@ -250,7 +250,7 @@ img {
   top: 0;
   left: 0;
   width: 100vw;
-  padding: 2em 0 2em 0;
+  padding: 32px 0 32px 0;
   background-color: #2d303a;
   border-bottom: 6px solid #323746;
   z-index: 50;
@@ -268,10 +268,14 @@ img {
   justify-content: space-between;
   align-items: flex-end;
 }
+@media (max-width: calc(1020px - 1px)) {
+  .header__wrapper {
+    align-items: center;
+  }
+}
 @media (max-width: calc(768px - 1px)) {
   .header__wrapper {
     justify-content: center;
-    align-items: center;
   }
 }
 
@@ -345,7 +349,7 @@ img {
 }
 .navbar__item--aside {
   margin: 0;
-  margin-bottom: 27px;
+  margin-bottom: 29px;
   padding-right: 5px;
 }
 .navbar__item--aside:last-child {
@@ -753,7 +757,7 @@ img {
 }
 
 .services {
-  padding: 3.7125em 0 1.875em 0;
+  padding: 59.4px 0 24px 0;
   background-color: #f2f2f2;
   border-bottom: 6px solid #fff;
   scroll-margin-top: calc( 95px - 1px );
@@ -761,7 +765,7 @@ img {
 @media (max-width: calc(1020px - 1px)) {
   .services {
     padding-top: calc( 59.4px - ( 1020px - 100vw ) * calc(( 59.4 - 39.24 ) / ( 1020 - 768 )) );
-    padding-bottom: calc( 30px - ( 1020px - 100vw ) * calc(( 30 - 19 ) / ( 1020 - 768 )) );
+    padding-bottom: calc( 24px - ( 1020px - 100vw ) * calc(( 24 - 19 ) / ( 1020 - 768 )) );
   }
 }
 @media (max-width: calc(768px - 1px)) {
@@ -793,13 +797,28 @@ img {
   font-style: normal;
   color: #767e9e;
 }
+@media (max-width: calc(768px - 1px)) {
+  .services__text {
+    letter-spacing: 0.025em;
+  }
+}
 
 .services__features {
-  margin-top: 2.85em;
+  margin-top: 47px;
 }
 @media (max-width: calc(1020px - 1px)) {
   .services__features {
-    margin-top: calc( 45.6px - ( 1020px - 100vw ) * calc( ( 45.6 - 38 ) / ( 1020 - 768 ) ) );
+    margin-top: calc( 47px - ( 1020px - 100vw ) * calc( ( 47 - 38 ) / ( 1020 - 768 ) ) );
+  }
+}
+@media (max-width: calc(768px - 1px)) {
+  .services__features {
+    margin-top: calc( 38px - ( 768px - 100vw ) * calc( ( 38 - 30 ) / ( 768 - 375 ) ) );
+  }
+}
+@media (max-width: calc(375px - 1px)) {
+  .services__features {
+    margin-top: 30px;
   }
 }
 
@@ -826,23 +845,29 @@ img {
 }
 @media (max-width: calc(640px - 1px)) {
   .features-list__item {
-    width: 80%;
-  }
-}
-@media (max-width: calc(375px - 1px)) {
-  .features-list__item {
     width: 100%;
+    padding-right: 0;
   }
 }
 
 .feature-tile {
-  margin-bottom: 1.875em;
+  margin-bottom: 32px;
   padding-left: 5em;
   position: relative;
 }
 @media (max-width: calc(1020px - 1px)) {
   .feature-tile {
-    margin-bottom: calc( 30px + ( 1020px - 100vw ) * calc( ( 50 - 30 ) / ( 1020 - 768 ) ) );
+    margin-bottom: calc( 32px - ( 1020px - 100vw ) * calc( ( 32 - 50 ) / ( 1020 - 768 ) ) );
+  }
+}
+@media (max-width: calc(768px - 1px)) {
+  .feature-tile {
+    margin-bottom: calc( 50px + ( 768px - 100vw ) * calc( ( 26 - 50 ) / ( 768 - 375 ) ) );
+  }
+}
+@media (max-width: calc(768px - 1px)) {
+  .feature-tile:last-child {
+    margin-bottom: calc( 50px + ( 768px - 100vw ) * calc( ( 20 - 50 ) / ( 768 - 375 ) ) );
   }
 }
 .feature-tile::before {
@@ -900,7 +925,7 @@ img {
 }
 
 .portfolio {
-  padding: 59px 0 calc(67px - 5px) 0;
+  padding: 59px 0 calc(68px - 5px) 0;
   background-color: #2d303a;
   border-bottom: 6px solid #323746;
   scroll-margin-top: calc( 95px - 1px );
@@ -908,7 +933,7 @@ img {
 @media (max-width: calc(768px - 1px)) {
   .portfolio {
     padding-top: calc( 59px - ( 768px - 100vw ) * calc(( 59 - 42 ) / ( 768 - 640 )) );
-    padding-bottom: calc( 62px - ( 768px - 100vw ) * calc(( 62 - 31 ) / ( 768 - 640 )) );
+    padding-bottom: calc( 62px - ( 768px - 100vw ) * calc(( 63 - 31 ) / ( 768 - 640 )) );
     scroll-margin-top: calc( 71px - 1px );
   }
 }
@@ -933,18 +958,18 @@ img {
   font-style: normal;
   color: #767e9e;
 }
+@media (max-width: calc(1020px - 1px)) {
+  .portfolio__text {
+    letter-spacing: 0.03em;
+  }
+}
 
 .portfolio__tabs {
-  margin-top: 11.2px;
-}
-@media (max-width: calc(1020px - 1px)) {
-  .portfolio__tabs {
-    margin-top: calc( 11.2px + ( 1020px - 100vw ) * calc(( 15 - 11.2 ) / ( 1020 - 768 )) );
-  }
+  margin-top: 12px;
 }
 @media (max-width: calc(768px - 1px)) {
   .portfolio__tabs {
-    margin-top: 15px;
+    margin-top: calc( 12px + ( 768px - 100vw ) * calc(( 15 - 12 ) / ( 768 - 375 )) );
   }
 }
 
@@ -1018,12 +1043,12 @@ img {
 }
 @media (max-width: calc(1020px - 1px)) {
   .portfolio__images {
-    margin-top: calc( 14px + ( 1020px - 100vw ) * calc(( 20 - 14 ) / ( 1020 - 768 )) );
+    margin-top: calc( 14px + ( 1020px - 100vw ) * calc(( 22 - 14 ) / ( 1020 - 768 )) );
   }
 }
 @media (max-width: calc(768px - 1px)) {
   .portfolio__images {
-    margin-top: 20px;
+    margin-top: 22px;
   }
 }
 
@@ -1047,7 +1072,7 @@ img {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
     column-gap: calc(13px - 10px);
-    row-gap: calc(14px - 10px);
+    row-gap: calc(13px - 10px);
   }
 }
 
@@ -1134,7 +1159,7 @@ img {
 }
 
 .about-us {
-  padding: 59px 0 68px 0;
+  padding: 59px 0 67px 0;
   background-color: #f2f2f2;
   border-bottom: 6px solid #fff;
   scroll-margin-top: calc( 95px - 1px );
@@ -1142,19 +1167,20 @@ img {
 @media (max-width: calc(1020px - 1px)) {
   .about-us {
     padding-top: calc( 59px - ( 1020px - 100vw ) * calc(( 59 - 52 ) / ( 1020 - 768 )) );
+    padding-bottom: calc( 67px - ( 1020px - 100vw ) * calc(( 67 - 69 ) / ( 1020 - 768 )) );
   }
 }
 @media (max-width: calc(768px - 1px)) {
   .about-us {
     padding-top: calc( 52px - ( 768px - 100vw ) * calc(( 52 - 33 ) / ( 768 - 640 )) );
-    padding-bottom: calc( 68px - ( 768px - 100vw ) * calc(( 68 - 39 ) / ( 768 - 640 )) );
+    padding-bottom: calc( 69px - ( 768px - 100vw ) * calc(( 69 - 39 ) / ( 768 - 640 )) );
     scroll-margin-top: calc( 71px - 1px );
   }
 }
 @media (max-width: calc(640px - 1px)) {
   .about-us {
     padding-top: 33px;
-    padding-bottom: 39px;
+    padding-bottom: 40px;
     border-bottom-color: #f2f2f2;
   }
 }
@@ -1175,7 +1201,22 @@ img {
 }
 
 .about-us__employees {
-  margin-top: 2.8em;
+  margin-top: 44px;
+}
+@media (max-width: calc(1020px - 1px)) {
+  .about-us__employees {
+    margin-top: calc( 44px + ( 1020px - 100vw ) * calc(( 38 - 44 ) / ( 1020 - 768 )) );
+  }
+}
+@media (max-width: calc(768px - 1px)) {
+  .about-us__employees {
+    margin-top: calc( 38px + ( 768px - 100vw ) * calc(( 24 - 38 ) / ( 768 - 375 )) );
+  }
+}
+@media (max-width: calc(375px - 1px)) {
+  .about-us__employees {
+    margin-top: 24px;
+  }
 }
 
 .employees-list {
@@ -1230,11 +1271,26 @@ img {
 }
 
 .employee-card__title {
-  margin-top: 0.8em;
+  margin-top: 17px;
   margin-left: -0.0555em;
   color: #666d89;
   word-spacing: 0.04em;
   letter-spacing: -0.006em;
+}
+@media (max-width: calc(1020px - 1px)) {
+  .employee-card__title {
+    margin-top: calc( 17px + ( 1020px - 100vw ) * calc(( 12 - 17 ) / ( 1020 - 768 )) );
+  }
+}
+@media (max-width: calc(768px - 1px)) {
+  .employee-card__title {
+    margin-top: calc( 12px + ( 768px - 100vw ) * calc(( 17.5 - 12 ) / ( 768 - 375 )) );
+  }
+}
+@media (max-width: calc(375px - 1px)) {
+  .employee-card__title {
+    margin-top: 17.5px;
+  }
 }
 
 .employee-card__text {
@@ -1247,6 +1303,16 @@ img {
   font-style: normal;
   color: #767e9e;
 }
+@media (max-width: calc(1020px - 1px)) {
+  .employee-card__text {
+    margin-top: calc( 9.96px + ( 1020px - 100vw ) * calc(( 3 - 9.96 ) / ( 1020 - 768 )) );
+  }
+}
+@media (max-width: calc(768px - 1px)) {
+  .employee-card__text {
+    margin-top: 3px;
+  }
+}
 
 .employee-card__socials {
   margin-top: 1.49em;
@@ -1258,7 +1324,7 @@ img {
 }
 
 .quote {
-  padding: 59px 0 58px 0;
+  padding: 59px 0 59px 0;
   background-color: #f06c64;
   border-bottom: 6px solid #ea676b;
   scroll-margin-top: calc( 95px - 1px );
@@ -1266,20 +1332,20 @@ img {
 @media (max-width: calc(1020px - 1px)) {
   .quote {
     padding-top: calc( 59px - ( 1020px - 100vw ) * calc(( 59 - 53 ) / ( 1020 - 768 )) );
-    padding-bottom: calc( 58px - ( 1020px - 100vw ) * calc(( 59 - 53 ) / ( 1020 - 768 )) );
+    padding-bottom: calc( 59px - ( 1020px - 100vw ) * calc(( 59 - 40 ) / ( 1020 - 768 )) );
   }
 }
 @media (max-width: calc(768px - 1px)) {
   .quote {
     padding-top: calc( 53px - ( 768px - 100vw ) * calc(( 53 - 44 ) / ( 768 - 640 )) );
-    padding-bottom: calc( 39px - ( 768px - 100vw ) * calc(( 39 - 36 ) / ( 768 - 640 )) );
+    padding-bottom: calc( 40px - ( 768px - 100vw ) * calc(( 40 - 31 ) / ( 768 - 640 )) );
     scroll-margin-top: calc( 71px - 1px );
   }
 }
 @media (max-width: calc(640px - 1px)) {
   .quote {
     padding-top: 44px;
-    padding-bottom: 36px;
+    padding-bottom: 31px;
     border-bottom-color: #f06c64;
   }
 }
@@ -1300,29 +1366,51 @@ img {
   font-style: normal;
   color: #f0d8d9;
 }
+@media (max-width: calc(768px - 1px)) {
+  .quote__text {
+    letter-spacing: 0.025em;
+  }
+}
 
 .flex-2-column {
   margin-top: 2.75em;
   display: flex;
   justify-content: space-between;
 }
+@media (max-width: calc(1020px - 1px)) {
+  .flex-2-column {
+    margin-top: calc( 44px + ( 1020px - 100vw ) * calc(( 25 - 44 ) / ( 1020 - 768 )) );
+  }
+}
+@media (max-width: calc(768px - 1px)) {
+  .flex-2-column {
+    margin-top: 25px;
+  }
+}
 @media (max-width: calc(640px - 1px)) {
   .flex-2-column {
     flex-direction: column;
+    margin-top: 23px;
   }
 }
 
 .form {
-  flex-basis: calc( 619 / 940 * 100%);
-  flex-shrink: 1;
+  flex: 1 1 600px;
   display: flex;
   flex-direction: column;
   position: relative;
+}
+@media (max-width: calc(640px - 1px)) {
+  .form {
+    width: 100%;
+    flex: 0 1 auto;
+  }
 }
 
 .form__input {
   width: 100%;
   padding: 0.66667em 1.25em;
+  margin-top: 16px;
   border-radius: 5px;
   border: none;
   background-color: #d6564f;
@@ -1334,10 +1422,19 @@ img {
   overflow: hidden;
   scroll-margin-top: calc( 95px + 5px );
 }
-@media (max-width: calc(640px - 1px)) {
+@media (max-width: calc(1020px - 1px)) {
   .form__input {
+    margin-top: calc( 16px - ( 1020px - 100vw ) * calc( ( 16 - 12 ) / ( 1020 - 768 ) ));
+  }
+}
+@media (max-width: calc(768px - 1px)) {
+  .form__input {
+    margin-top: 12px;
     scroll-margin-top: calc( 71px + 5px );
   }
+}
+.form__input:first-child {
+  margin-top: 0;
 }
 .form__input::-ms-input-placeholder {
   color: inherit;
@@ -1366,25 +1463,11 @@ img {
   outline: none;
 }
 
-.form__input + .form__input {
-  margin-top: 16px;
-}
-@media (max-width: calc(1020px - 1px)) {
-  .form__input + .form__input {
-    margin-top: calc( 16px - ( 1020px - 100vw ) * calc( ( 16 - 12 ) / ( 1020 - 768 ) ));
-  }
-}
-@media (max-width: calc(768px - 1px)) {
-  .form__input + .form__input {
-    margin-top: 12px;
-  }
-}
-
 .form__input--textarea {
   padding-top: 0.6em;
   padding-bottom: 1.6em;
   width: 100%;
-  max-height: 17em;
+  max-height: 159px;
   word-wrap: break-word;
   overflow-y: scroll;
   resize: none;
@@ -1406,7 +1489,8 @@ img {
 }
 
 .form__submit {
-  padding: 0.785em 4em;
+  padding: 10px 48px;
+  margin-top: 15px;
   flex-grow: 0;
   width: max-content;
   border: 1px solid transparent;
@@ -1419,9 +1503,28 @@ img {
   text-transform: uppercase;
   cursor: pointer;
 }
+@media (max-width: calc(1020px - 1px)) {
+  .form__submit {
+    margin-top: calc( 15px - ( 1020px - 100vw ) * calc( ( 15 - 18 ) / ( 1020 - 768 ) ));
+  }
+}
+@media (max-width: calc(768px - 1px)) {
+  .form__submit {
+    padding-top: calc( 10px - ( 768px - 100vw ) * calc( ( 10 - 17 ) / ( 768 - 375 ) ));
+    padding-bottom: calc( 10px - ( 768px - 100vw ) * calc( ( 10 - 17 ) / ( 768 - 375 ) ));
+    margin-top: calc( 15px - ( 768px - 100vw ) * calc( ( 15 - 14 ) / ( 768 - 375 ) ));
+  }
+}
 @media (max-width: calc(640px - 1px)) {
   .form__submit {
     width: 100%;
+  }
+}
+@media (max-width: calc(375px - 1px)) {
+  .form__submit {
+    padding-top: 17px;
+    padding-bottom: 17px;
+    margin-top: 14px;
   }
 }
 .form__submit:active {
@@ -1437,8 +1540,7 @@ img {
 }
 
 .contacts {
-  flex-basis: calc( 300 / 940 * 100%);
-  flex-shrink: 2;
+  flex: 0 1 300px;
   margin-left: 20px;
 }
 @media (max-width: calc(1020px - 1px)) {
@@ -1453,6 +1555,8 @@ img {
 }
 @media (max-width: calc(640px - 1px)) {
   .contacts {
+    width: 100%;
+    flex: 0 1 auto;
     margin-left: 0;
     margin-top: 32px;
   }
@@ -1473,6 +1577,17 @@ img {
   text-align: justify;
   letter-spacing: -0.02em;
 }
+@media (max-width: calc(1020px - 1px)) {
+  .contacts__text {
+    margin-top: calc( 10.2px + ( 1020px - 100vw ) * calc( ( 3 - 10.2 ) / ( 1020 - 768 ) ));
+    letter-spacing: 0;
+  }
+}
+@media (max-width: calc(768px - 1px)) {
+  .contacts__text {
+    margin-top: 3px;
+  }
+}
 .contacts__text::first-line {
   line-height: 1.75;
 }
@@ -1481,11 +1596,27 @@ img {
   margin-top: 1.2625rem;
   padding-left: 1rem;
 }
+@media (max-width: calc(1020px - 1px)) {
+  .contacts-list {
+    margin-top: calc( 20.2px + ( 1020px - 100vw ) * calc( ( 10 - 20.2 ) / ( 1020 - 768 ) ));
+  }
+}
+@media (max-width: calc(768px - 1px)) {
+  .contacts-list {
+    margin-top: 10px;
+  }
+}
+
+@media (max-width: calc(640px - 1px)) {
+  .contacts-list__item {
+    margin-bottom: 5px;
+  }
+}
 
 .contact-link {
   position: relative;
-  padding-left: 0.33333em;
-  padding-right: 0.33333em;
+  padding-left: 4px;
+  padding-right: 4px;
   border-radius: 4px;
   font-size: 0.75rem;
   line-height: 1.6;
